--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "17.0.1"
+  },
   "dependencies": {
     "bootstrap": "^5.2.0",
     "express": "^4.18.1",
